--- a/R2B0app/ViewAudio.xaml
+++ b/R2B0app/ViewAudio.xaml
@@ -6,7 +6,7 @@
 			<local:AwesomeWrappanel x:Name="theList" Orientation="Horizontal" Spacing="2">
 				<local:AwesomeWrappanel.ItemTemplate>
 					<DataTemplate>
-						<Button WidthRequest="110" Text="{Binding Title}" TextColor="#5AA9D3" CommandParameter="{Binding}" Clicked="ButtonClicked" BorderWidth="1" BorderColor="Black" />
+						<Button WidthRequest="110" Text="{Binding Title}" TextColor="#236BFD" CommandParameter="{Binding}" Clicked="ButtonClicked" BorderWidth="1" BorderColor="Black" />
 					</DataTemplate>
 				</local:AwesomeWrappanel.ItemTemplate>
 			</local:AwesomeWrappanel>
