--- a/R2B0app/ViewAudioIcon.xaml
+++ b/R2B0app/ViewAudioIcon.xaml
@@ -6,7 +6,7 @@
 			<local:AwesomeWrappanel x:Name="theList" Orientation="Horizontal" Spacing="1">
 				<local:AwesomeWrappanel.ItemTemplate>
 					<DataTemplate>
-						<Grid WidthRequest="86" HeightRequest="106" Padding="0" RowSpacing="0" ColumnSpacing="0">
+						<Grid WidthRequest="86" HeightRequest="126" Padding="0" RowSpacing="0" ColumnSpacing="0">
 					        <Grid.ColumnDefinitions>
 					            <ColumnDefinition Width="3"/>
 					            <ColumnDefinition Width="80"/>
@@ -15,14 +15,14 @@
 					        <Grid.RowDefinitions>
 					            <RowDefinition Height="3"/>
 					            <RowDefinition Height="80"/>
-					            <RowDefinition Height="20"/>
+					            <RowDefinition Height="40"/>
 					            <RowDefinition Height="3"/>
 					        </Grid.RowDefinitions>
 
-							<BoxView BackgroundColor="#5AA9D3" Grid.Row="0" Grid.RowSpan="4" Grid.Column="0" Grid.ColumnSpan="3" />
-							<BoxView BackgroundColor="White" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" />
-							<BoxView BackgroundColor="#5AA9D3" Grid.Row="2" Grid.Column="1" />
-							<Label Text="{Binding Title}" FontSize="17" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="2" Grid.Column="1" />
+							<BoxView BackgroundColor="#B6E6D8" Grid.Row="0" Grid.RowSpan="4" Grid.Column="0" Grid.ColumnSpan="3" />
+							<BoxView BackgroundColor="#A5BCC2" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" />
+							<BoxView BackgroundColor="#74B9D6" Grid.Row="2" Grid.Column="1" />
+							<Label Text="{Binding Title}" FontSize="14" Margin="4,0,4,0" TextColor="#236BFE" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" Grid.Row="2" Grid.Column="1" />
 							<local:FontAwesomeIcon Text="{Binding Icon}" FontSize="60" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" Grid.Row="1" Grid.Column="1"/>
 							<Button Text="" BackgroundColor="Transparent" CommandParameter="{Binding}" BorderColor="Transparent" BorderWidth="0" Grid.Row="0" Grid.RowSpan="4" Grid.Column="0" Grid.ColumnSpan="3" Clicked="ButtonClicked" />
 						</Grid>
