--- a/R2B0app/ViewMenu.xaml
+++ b/R2B0app/ViewMenu.xaml
@@ -19,10 +19,10 @@
 					            <RowDefinition Height="3"/>
 					        </Grid.RowDefinitions>
 
-							<BoxView BackgroundColor="#5AA9D3" Grid.Row="0" Grid.RowSpan="4" Grid.Column="0" Grid.ColumnSpan="3" />
-							<BoxView BackgroundColor="White" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" />
-							<BoxView BackgroundColor="#5AA9D3" Grid.Row="2" Grid.Column="1" />
-							<Label Text="{Binding Title}" FontSize="17" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="2" Grid.Column="1" />
+							<BoxView BackgroundColor="#7AA6FD" Grid.Row="0" Grid.RowSpan="4" Grid.Column="0" Grid.ColumnSpan="3" />
+							<BoxView BackgroundColor="#E9F0FF" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" />
+							<BoxView BackgroundColor="#DCE6FF" Grid.Row="2" Grid.Column="1" />
+							<Label Text="{Binding Title}" FontSize="17" TextColor="#236BFD" HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="2" Grid.Column="1" />
 							<local:FontAwesomeIcon Text="{Binding Icon}" FontSize="60" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" Grid.Row="1" Grid.Column="1"/>
 							<Button Text="" BackgroundColor="Transparent" CommandParameter="{Binding}" BorderColor="Transparent" BorderWidth="0" Grid.Row="0" Grid.RowSpan="4" Grid.Column="0" Grid.ColumnSpan="3" Clicked="ButtonClicked" />
 						</Grid>
