--- a/R2B0app/R2B0appPage.xaml
+++ b/R2B0app/R2B0appPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:R2B0app" x:Class="R2B0app.R2B0appPage">
 	<StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-		<ContentView x:Name="viewLeft" WidthRequest="173"/>
+		<ContentView x:Name="viewLeft" WidthRequest="173" MinimumWidthRequest="173"/>
 		<ContentView x:Name="viewRight" HorizontalOptions="FillAndExpand"/>
 	</StackLayout>
 </ContentPage>
